Fix a bug on mobile menu

--- a/app/assets/stylesheets/app.nav.scss
+++ b/app/assets/stylesheets/app.nav.scss
@@ -189,7 +189,7 @@ ul.nav-mobile {
 
 	li.nav-mobile-section {
 		margin-top: 15px;
-		margin-bottom: 15px;
+		margin-bottom: 30px;
 		font-weight: 400;
 		font-size: 25px;
 		color: #E1580A;
